[unit test] - view model - transformer - repository media